[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qts-ctp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
]

[tool.setuptools]
packages = ["qts_ctp"]
#packages = {find = {include = ["ctp*"]}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.so", "**/*.so"]

