[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "qts-rohon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
]

[tool.setuptools]
packages = ["qts_rohon"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.so", "**/*.so"]

